# SolarPanelDetection

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
src/: api.py  main.py
src/core/: config.py  schemas.py
src/pipeline/: buffer.py  pipeline.py  preprocess.py  qc.py
src/pipeline/intelligence/: ollama.py
src/pipeline/model/: model.py
src/pipeline/sources/: static_maps.py
src/pipeline/validation/: response.py
